# Autonomous_navigation_exploration

comparative_experiment/: CMakeLists.txt  README.md  package.xml  run_experiments.sh
comparative_experiment/analysis/: .gitignore  QUICK_START.md  README.md  analyze_all.sh  record_experiments.sh  trajectory_analyzer.py  总结说明.txt
comparative_experiment/launch/: cylinder.launch  maze.launch  substation.launch
comparative_experiment/scripts/: auto_goal_publisher.py
dwa_local_planner/: CMakeLists.txt  README.md  package.xml
dwa_local_planner/config/: params.yaml
dwa_local_planner/include/dwa_local_planner/: dwa_local_planner.h
dwa_local_planner/launch/: astar_local_dwa.launch  rrtstar_local_dwa.launch
dwa_local_planner/src/: dwa_local_planner.cpp  dwa_local_planner_node.cpp
global_path_planner/: CMakeLists.txt  README_ASTAR.md  package.xml
global_path_planner/include/global_path_planner/: Point.h  aStarOctomap.h  density_frontier_explorer.h  rrtOctomap.h  rrtStarOctomap.h
global_path_planner/launch/: astar_interactive.launch  density_exploration.launch  save_octomap.launch
global_path_planner/octo_maps/: corridor.bt  substation.bt
global_path_planner/scripts/: test_astar.sh
global_path_planner/src/: astar_interactive_node.cpp  density_exploration_node.cpp  density_frontier_explorer.cpp  rrt_star_interactive_node.cpp
local_planner/src/: localPlanner.cpp
mpc_local_planner/: CMakeLists.txt  README.md  package.xml
mpc_local_planner/config/: params.yaml
mpc_local_planner/include/mpc_local_planner/: mpc_local_planner.h
mpc_local_planner/launch/: astar_local_mpc.launch  rrtstar_local_mpc.launch
mpc_local_planner/src/: mpc_local_planner.cpp  mpc_local_planner_node.cpp
navigation_start/: CMakeLists.txt  README.md  package.xml
navigation_start/launch/: astar_global_navigation.launch  exploration.launch  exploration_tare.launch  local_navigation.launch  rrtstar_global_navigation.launch
navigation_start/rviz/: astar_global_plan.rviz  exploration.rviz  global_plan.rviz  local_plan.rviz
tare_planner/config/: campus.yaml  forest.yaml  garage.yaml  indoor.yaml  matterport.yaml  tunnel.yaml
tare_planner/include/sensor_coverage_planner/: sensor_coverage_planner_ground.h
tare_planner/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
vehicle_simulator/launch/: system_campus.launch  vehicle_simulator.launch
vehicle_simulator/rviz/: test.rviz
vehicle_simulator/world/: substation.world
visualization_tools/launch/: visualization_tools.launch
visualization_tools/src/: visualizationTools.cpp
