<?xml version="1.0"?>
<package format="2">
  <name>mpc_local_planner</name>
  <version>1.0.0</version>
  <description>MPC (Model Predictive Control) local planner for autonomous navigation</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>
