<?xml version="1.0"?>
<package format="2">
  <name>navigation_start</name>
  <version>1.0.0</version>
  <description>Launch files for starting navigation and exploration</description>
  
  <maintainer email="rjl@example.com">RJL</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for launch files -->
  <exec_depend>vehicle_simulator</exec_depend>
  <exec_depend>local_planner</exec_depend>
  <exec_depend>loam_interface</exec_depend>
  <exec_depend>terrain_analysis</exec_depend>
  <exec_depend>terrain_analysis_ext</exec_depend>
  <exec_depend>sensor_scan_generation</exec_depend>
  <exec_depend>tare_planner</exec_depend>
  <exec_depend>global_path_planner</exec_depend>

</package>


